Create camera setup with calibration files

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -30,7 +30,7 @@
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
             </div>*@
         
-        <input type="submit" value="Log in" />
+        <input type="submit" value="Log in" class="button rounded fill-highlight"/>
     </form>
     @*<p>
         @Html.ActionLink("Register", "Register") if you don't have an account.
