--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,10 +17,8 @@
         }
 </style>
 <div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("PictureUpload")" class="button rounded fill-highlight">
-@*<img src="~/Images/hemButton.png" class="button" />*@
-    @*<p class="box -hero -doublemargin fill-main text-centered rounded">Upload Hemispherical Pictures</p>*@
     Upload Hemispherical Pictures
 </a></div>
-@*<a href="@Url.Action("FileUpload")">
-<img src="~/Images/ancButton.png" class="button"/>
-</a>*@
+<div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("CameraSetups")" class="button rounded fill-highlight">
+    Manage Camera Setups
+</a></div>
