--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -32,9 +32,9 @@
         
         <input type="submit" value="Log in" class="button rounded fill-highlight"/>
     </form>
-    @*<p>
-        @Html.ActionLink("Register", "Register") if you don't have an account.
-    </p>*@
+    <p>
+        @Html.ActionLink("Register", "Register") if you don't have an account yet.
+    </p>
 }
 </section>
 
