--- a/Views/Home/SetDetails.cshtml
+++ b/Views/Home/SetDetails.cshtml
@@ -18,6 +18,7 @@
 <div class="container" id="container">
     <div class="row">
         <div class="col-md-6 ">
+            @if(Model.siteID != 0){
             <div class="row clearfix">
                 <div class="col-md-4">
                     <label class="display-label">
@@ -37,7 +38,19 @@
                 <div class="display-field col-md-8">
                     @Html.DisplayFor(model => model.siteCode)
                 </div>
+            </div>}
+            else{
+                <div class="row clearfix">
+                <div class="col-md-4">
+                    <label class="display-label">
+                        @Html.DisplayNameFor(model => model.siteName)
+                    </label>
+                </div>
+                <div class="display-field col-md-8">
+                    @Html.DisplayFor(model => model.siteName)
+                </div>
             </div>
+            }
             <div class="row clearfix">
                 <div class="col-md-4">
                     <label class="display-label">
