--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,20 +4,25 @@
 }
 
 <h1>Index</h1>
+<h2>Welcome to the Leaf Area Index Tool</h2>
 <h5>Choose your action:</h5>
-@*@Html.ActionLink("Upload Hemispherical Pictures", "PictureUpload")
-@Html.ActionLink("Upload Data Files", "FileUpload")*@
 <style>
     .button {
-        margin: 50px 20px 50px 20px;
-        
+        margin: 50px 20px 50px 20px;        
     }
-        .button:hover {
+    .button:hover {
         text-decoration:none;
-        }
+    }
 </style>
 <div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("PictureUpload")" class="button rounded fill-highlight">
     Upload Hemispherical Pictures
+</a></div>
+<div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("CreateCameraSetup")" class="button rounded fill-highlight">
+    Create New Camera Setup
+</a></div>
+<div class="row clearfix"></div>
+<div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("Overview")" class="button rounded fill-highlight">
+    Overview Uploads
 </a></div>
 <div class="col-md-4 col-md-offset-1"> <a href="@Url.Action("CameraSetups")" class="button rounded fill-highlight">
     Manage Camera Setups
