--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
-    @*@Styles.Render("~/Content/dropzonecss")*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/dropzonescripts")
@@ -36,76 +35,17 @@
                 <nav class="hidden-xs">
                     <ul class="inline-list">
                         <li class="inline-list-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "text-white nav-link -home" })</li>
-                        <li class="inline-list-item">@Html.ActionLink("Overview", "Overview", "Home", null, new { @class = "text-white nav-link " })</li>
-                       @* <li class="inline-list-item">@Html.ActionLink("Manage Sites", "Manage", "Home", null, new { @class = "text-white nav-link " })</li>*@
-                        <li class="inline-list-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "text-white nav-link " })</li>
-
-
-                        @*<li class="inline-list-item"><a href="index.html" class="text-white nav-link -home">Home</a></li>
-                        <li class="inline-list-item"><a href="organisation.html" class="text-white nav-link">Organisation</a></li>
-                        <li class="inline-list-item"><a href="infrastructure.html" class="text-white nav-link">Belgian Network</a></li>
-                        <li class="inline-list-item"><a href="etc.html" class="text-white nav-link">ETC-Antwerp</a></li>
-                        <li class="inline-list-item"><a href="agenda.html" class="text-white nav-link -active">Agenda</a></li>
-                        <li class="inline-list-item"><a href="partners.html" class="text-white nav-link">Partners & Funding</a></li>
-                        <li class="inline-list-item"><a href="news.html" class="text-white nav-link">News</a></li>
-                        <li class="inline-list-item"><a href="links.html" class="text-white nav-link">Links</a></li>
-                        <li class="inline-list-item"><a href="contact.html" class="text-white nav-link">Contact</a></li>*@
+                        <li class="inline-list-item">@Html.ActionLink("Upload Hemispherical Pictures", "PictureUpload", "Home", null, new { @class = "text-white nav-link upload " })</li>
+                        <li class="inline-list-item">@Html.ActionLink("Overview Uploads", "Overview", "Home", null, new { @class = "text-white nav-link overview " })</li>
+                        <li class="inline-list-item">@Html.ActionLink("Create Camera Setup", "createCameraSetup", "Home", null, new { @class = "text-white nav-link create" })</li>
+                        <li class="inline-list-item">@Html.ActionLink("Manage Camera Setups", "CameraSetups", "Home", null, new { @class = "text-white nav-link manageSetups" })</li>
+                        <li class="inline-list-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "text-white nav-link contact" })</li>
                     </ul>
                 </nav>
-                @*<nav class="visible-xs">
-                    <a class="menu-toggle left collapse" data-target="menu-list" data-active="open" data-inactive="close">Menu</a>
-                    <h1 class="menu-title text-title-box text-white text-centered">ICOS Belgium Home</h1>
-                    <ul class="unstyled-list" style="display: none" id="menu-list">
-                        <li class=""><a href="index.html" class="text-white nav-link -active">Home</a></li>
-                        <li class=""><a href="organisation.html" class="text-white nav-link">Organisation</a></li>
-                        <li class="">
-                            <a href="infrastructure.html" class="text-white nav-link">Belgian Network</a>
-                            <ul class="unstyled-list text-centered">
-                                <li class=""><a href="infrastructure.html" class="subnav-link text-white">Overview</a></li>
-                                <li class=""><a href="inf_ecosystem.html" class="subnav-link text-white">Ecosystem Component</a></li>
-                                <li class=""><a href="inf_oceanic.html" class="subnav-link text-white">Ocean Component</a></li>
-                            </ul>
-                        </li>
-                        <li class=""><a href="etc.html" class="text-white nav-link">ETC-Antwerp</a></li>
-                        <li class=""><a href="agenda.html" class="text-white nav-link">Agenda</a></li>
-                        <li class=""><a href="partners.html" class="text-white nav-link">Partners & Funding</a></li>
-                        <li class=""><a href="news.html" class="text-white nav-link">News</a></li>
-                        <li class=""><a href="links.html" class="text-white nav-link">Links</a></li>
-                        <li class=""><a href="contact.html" class="text-white nav-link">Contact</a></li>
-                    </ul>
-                </nav>*@
             </div>
         </div>
 
     </header>
-    @*<header>
-            <div class="content-wrapper">
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    </div>
-                <div class="float-left">
-                    <p class="site-title"><a href="@Url.Action("Index", "Home")"><img src="~/Images/Icos_Logo_RGB_Regular%20ETC.png" style="height:100px" /></a></p>
-                </div>
-                <div class="float-left site-title" style="margin-top:5px">Leaf Area Index Tool
-                    </div>
-                <div class="float-right">
-                    @*<section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">*@
-    @* <li>@Html.ActionLink("Calculate LAI", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Upload File", "FileUpload", "Home")</li>*@
-    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Overview", "Overview", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </header>*@
     <div id="main">
         <div class="bg-grad-white-bottomleft section">
             <div class="container">
@@ -133,16 +73,16 @@
                             Campus Drie Eiken, D.B.020<br />
                             Universiteitsplein 1<br />
                             B-2610 Wilrijk<br />
-							@*E. <a href="mailto:Reinhart.Ceulemans@uantwerpen.be">Reinhart.Ceulemans@uantwerpen.be</a>*@
                         </p>
                     </div>
                     <div class="col-sm-3">
                         <h5 class="text-uppercase text-white">ICOS Central Facilities</h5>
                         <p>
-                            <a href="mailto:database@unitus.it"><span></span></a><a href="http://www.icos-ri.eu/" target="_blank"><span class="icon-arrow-right"></span>ICOS Head Office</a><br />
+                            <a href="http://www.icos-ri.eu/" target="_blank"><span class="icon-arrow-right"></span>ICOS Head Office</a><br />
                             <span><a href="https://icos-atc-demo.lsce.ipsl.fr" target="_blank"><span class="icon-arrow-right"></span>The atmospheric Thematic Centre</a></span>
                             <br />
-                            <span class=""><a href="" target=" originalAttribute="href" originalPath="" target=" originalAttribute="href" originalPath="" target=" originalAttribute="href" originalPath="" target="_blank"><span class="icon-arrow-right"></span>The Central Analytical Laboratory</a></span> 
+                            <span><a href="https://www.icos-ri.eu/node/6" target="_blank"><span class="icon-arrow-right"></span>The Central Analytical Laboratory</a></span> 
+
 <span class=""><a href="http://www.europe-fluxdata.eu/icos/home" target="_blank"><span class="icon-arrow-right"></span>The Ecosystem Thematic Centre</a></span>
                             <span><a href="http://www.icos-otc.eu/" target="_blank"><span class="icon-arrow-right"></span>The Ocean Thematic Centre</a></span>
                         </p>
