--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                         <h5 class="text-uppercase text-white">ICOS ETC Antwerp</h5>
                         <p>
                             University of Antwerp, Department of Biology<br />
-                            Campus Drie Eiken, D.B.020<br />
+                            Campus Drie Eiken, D.C.210<br />
                             Universiteitsplein 1<br />
                             B-2610 Wilrijk<br />
                         </p>
